# repo_health

./: .env.example  .gitignore  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
src/github_requests_cli/: __init__.py  cli.py
tests/: test_cli.py
